# django-social-bookmarks

./: .gitignore  AGENTS.md  README.md  pi-session-2026-04-27T12-54-07-285Z_019dcf01-12b4-7314-90cc-4ea7436497c8.html  pyproject.toml
.pi/skills/generate-commit/: SKILL.md
.pi/skills/generate-readme/: SKILL.md
account/: authentication.py  forms.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/: base.html
account/templates/account/: dashboard.html  edit.html  register.html  register_done.html
account/templates/registration/: login.html  password_change_form.html  password_reset_confirm.html  password_reset_form.html
bookmarks/: settings.py  urls.py
images/: forms.py  models.py  views.py
images/migrations/: 0001_initial.py  0002_image_users_like.py
images/static/js/: bookmarklet.js
images/templates/: bookmarklet_launcher.js
images/templates/images/image/: detail.html
