[project]
name = "bookmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.4",
    "django-extensions==4.1",
    "pillow==12.2.0",
    "pyopenssl==26.1.0",
    "python-decouple==3.8",
    "social-auth-app-django==5.8.0",
    "werkzeug==3.1.8",
]
